--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ project(DeepRecurrent)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
 
 add_executable(DeepRecurrent drnt.cpp)
+add_executable(GruDeepRecurrent gru_drnt.cpp)
 add_executable(Baseline softmax_reg.cpp)
 
 install (TARGETS Baseline DESTINATION bin)
 install (TARGETS DeepRecurrent DESTINATION bin)
+install (TARGETS GruDeepRecurrent DESTINATION bin)
