--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,11 @@ project(DeepRecurrent)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
 
 add_executable(DeepRecurrent drnt.cpp)
-add_executable(GruDeepRecurrent gru_drnt.cpp)
+add_executable(GruDeepRecurrent gru_drnt_run.cpp)
+add_executable(GruDeepRecurrentSearch gru_drnt_gridsearch.cpp)
 add_executable(Baseline softmax_reg.cpp)
 
 install (TARGETS Baseline DESTINATION bin)
 install (TARGETS DeepRecurrent DESTINATION bin)
 install (TARGETS GruDeepRecurrent DESTINATION bin)
+install (TARGETS GruDeepRecurrentSearch DESTINATION bin)
