--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,20 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
 
 add_executable(DeepRecurrent drnt_run.cpp)
 add_executable(DeepRecurrentSearch drnt_gridsearch.cpp)
+add_executable(DeepRecurrentSentence drnt_forward.cpp)
 
 add_executable(GruDeepRecurrent gru_drnt_run.cpp)
 add_executable(GruDeepRecurrentSearch gru_drnt_gridsearch.cpp)
+add_executable(GruDeepRecurrentSentence gru_drnt_forward.cpp)
 
 add_executable(Baseline softmax_reg.cpp)
 
 install (TARGETS Baseline DESTINATION bin)
+
 install (TARGETS DeepRecurrent DESTINATION bin)
 install (TARGETS DeepRecurrentSearch DESTINATION bin)
+install (TARGETS DeepRecurrentSentence DESTINATION bin)
+
 install (TARGETS GruDeepRecurrent DESTINATION bin)
 install (TARGETS GruDeepRecurrentSearch DESTINATION bin)
+install (TARGETS GruDeepRecurrentSentence DESTINATION bin)
